# cflp

./: .gitignore  INSTALL  LICENSE  Makefile  README  Setup.lhs  Test.lhs  cflp.cabal  configure  index.html  modules.html  permsort.lhs
Control/: CFLP.lhs  LazyFLP.lhs
Control/Monad/: Constraint.lhs
Control/Monad/Constraint/: Choice.lhs
Data/: LazyNondet.lhs
Data/LazyNondet/: Bool.lhs  List.lhs
src/: CFLP.lhs
src/CFLP/: Data.lhs  Strategies.lhs  Tests.lhs
src/CFLP/Constraints/: Boolean.lhs
src/CFLP/Control/: Strategy.lhs
src/CFLP/Control/Monad/: Update.lhs
src/CFLP/Data/: Generic.lhs  HigherOrder.lhs  Matching.lhs  Narrowing.lhs  Primitive.lhs  Types.lhs  UniqueID.lhs
src/CFLP/Strategies/: CallTimeChoice.lhs  DepthCounter.lhs  DepthFirst.lhs  DepthLimit.lhs  Random.lhs
src/CFLP/Tests/: Boolean.lhs  CallTimeChoice.lhs  HigherOrder.lhs
src/CFLP/Types/: Bool.lhs  List.lhs
src/Control/: CFLP.lhs  Strategy.lhs
src/Control/CFLP/: Tests.lhs
src/Control/CFLP/Strategies/: DepthFirstSearch.lhs
src/Control/CFLP/Tests/: CallTimeChoice.lhs  HigherOrder.lhs
src/Control/Constraint/: Choice.lhs
src/Control/Monad/: Constraint.lhs  Update.lhs
src/Control/Monad/Constraint/: Choice.lhs
src/Control/Monad/Trans/: Update.lhs
src/Control/Strategy/: Trans.lhs
src/Control/Strategy/Trans/: CallTimeChoice.lhs
src/Data/: LazyNondet.lhs
src/Data/LazyNondet/: Bool.lhs  Combinators.lhs  Generic.lhs  HigherOrder.lhs  List.lhs  Matching.lhs  Narrowing.lhs  Primitive.lhs  Types.lhs  UniqueID.lhs
src/Data/LazyNondet/Types/: Bool.lhs  List.lhs
