Name:          cflp
Version:       0.0
Cabal-Version: >= 1.2
Synopsis:      Constraint Functional-Logic Programming in Haskell
Category:      Control
License:       BSD3
License-File:  LICENSE
Author:        Sebastian Fischer
Maintainer:    sebf@informatik.uni-kiel.de
Homepage:      http://www-ps.informatik.uni-kiel.de/~sebf/projects/cflp.html
Build-Type:    Simple
Stability:     experimental

Library
  Build-Depends:   base, ghc, mtl, syb
  Exposed-Modules: Control.CFLP
  Other-Modules:   Control.Monad.Constraint,
                   Control.Monad.Constraint.Choice,
                   Data.LazyNondet,
                   Data.LazyNondet.Bool,
                   Data.LazyNondet.List
  Hs-Source-Dirs:  src
  Extensions:      ExistentialQuantification,
                   MultiParamTypeClasses,
                   FlexibleInstances,
                   FlexibleContexts,
                   TypeFamilies,
                   RankNTypes

Source-Repository head
  type:     git
  location: git://github.com/sebfisch/cflp.git

